--- a/site/index.html
+++ b/site/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Memphis - Bootstrap 5 Fashion Store HTML CSS Template</title>
+  <title>Kaira - Bootstrap 5 Fashion Store HTML CSS Template</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -169,7 +169,7 @@
 
       <ul class="cat-list">
         <li class="cat-list-item">
-          <a href="#" title="Jackets">Jackets</a>
+          <a href="#" title="Jackets">memphis</a>
         </li>
         <li class="cat-list-item">
           <a href="#" title="T-shirts">T-shirts</a>
