--- a/site/index.html
+++ b/site/index.html
@@ -169,7 +169,7 @@
 
       <ul class="cat-list">
         <li class="cat-list-item">
-          <a href="#" title="Jackets">memphis</a>
+          <a href="#" title="Jackets">Jackets</a>
         </li>
         <li class="cat-list-item">
           <a href="#" title="T-shirts">T-shirts</a>
